workloads/default/ignored/http-debug.deploy.yml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: http-debug
  namespace: default
  labels:
    app: http-debug
  annotations:
    flux.weave.works/ignore: "true"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-debug
  template:
    metadata:
      labels:
        app: http-debug
    spec:
      containers:
        - name: http-https-echo
          image: "mendhak/http-https-echo:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              hostPort: 8080
